--- a/angularapp/src/app/components/crop/updatecrop/updatecrop.component.html
+++ b/angularapp/src/app/components/crop/updatecrop/updatecrop.component.html
@@ -70,7 +70,7 @@
         *{{ errorMessage }}
       </div>
   
-      <button type="submit">Update Loan</button>
+      <button type="submit">Update Crop</button>
     </form>
   </div>
   <div class="success-popup" *ngIf="successPopup">
