--- a/angularapp/src/app/components/crop/viewcrop/viewcrop.component.html
+++ b/angularapp/src/app/components/crop/viewcrop/viewcrop.component.html
@@ -1,60 +1,63 @@
-
 <div>
-    <div id="loanHomeBody">
-      <h1>Available Crops</h1>
-      <hr>
-  
-      <!-- Search Box -->
-      <div class="top-container">
-        <input
-          id="searchBox"
-          type="text"
-          placeholder="Search..."
-          [(ngModel)]="searchField"
-          (ngModelChange)="handleSearchChange($event)"
-        />
-  
-      </div>
-  
-      <!-- Available Loans Table -->
-      <table class="loan-table">
-        <thead>
-          <tr>
-            <th>S.No</th>
-            <th>Crop Name</th>
-            <th>Crop Type</th>
-            <th>Description</th>
-            <th>PlantingDate</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody *ngIf="filteredcrops.length; else noRecords">
-            <tr *ngFor="let crop of filteredcrops,let i = index">
-              <td>{{ i + 1 }}</td>
-              <td>{{ crop.CropName }}</td>
-              <td>{{ crop.CropType }}</td>
-              <td>{{ crop.Description }}%</td>
-              <td>{{ crop.PlantingDate }}</td>
-              <td>
-                <!-- <button
-                  id="greenButton"
-                  *ngIf="!isLoanApplied(loan)"
-                  (click)="handleApplyClick(loan)"
-                >
-                  Apply
-                </button> -->
-                <!--   -->
-              </td>
-            </tr>
-          </tbody>
-        <ng-template #noRecords>
-          <tbody>
-            <tr>
-              <td colSpan="6" class="no-records-cell">Oops! No records Found</td>
-            </tr>
-          </tbody>
-        </ng-template>
-      </table>
+  <div id="loanHomeBody">
+    <h1>Available Crops</h1>
+    <hr>
+
+    <!-- Search Box -->
+    <div class="top-container">
+      <input id="searchBox" type="text" placeholder="Search..." [(ngModel)]="searchField"
+        (ngModelChange)="handleSearchChange($event)" />
+
     </div>
+
+    <!-- Available Loans Table -->
+    <table class="loan-table">
+      <thead>
+        <tr>
+          <th>S.No</th>
+          <th>Crop Name</th>
+          <th>Crop Type</th>
+          <th>Description</th>
+          <th>PlantingDate</th>
+          <th>Edit</th>
+          <th>Delete</th>
+        </tr>
+      </thead>
+      <tbody *ngIf="filteredcrops.length; else noRecords">
+        <tr *ngFor="let crop of filteredcrops,let i = index">
+          <td>{{ i + 1 }}</td>
+          <td>{{ crop.CropName }}</td>
+          <td>{{ crop.CropType }}</td>
+          <td>{{ crop.Description }}%</td>
+          <td>{{ crop.PlantingDate }}</td>
+          <td>
+            <button (click)="navigateToEditCrop(crop.CropId)">Edit</button>
+            <!--   -->
+          </td>
+          <td>
+            <button (click)="handleDeleteClick(crop.CropId)">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+
+      <ng-template #noRecords>
+        <tbody>
+          <tr>
+            <td colSpan="7" class="no-records-cell">Oops! No records Found</td>
+          </tr>
+        </tbody>
+      </ng-template>
+    </table>
   </div>
-  
+</div>
+
+
+<div *ngIf="showDeletePopup" class="delete-popup">
+  <p>Are you sure you want to delete?</p>
+  <button class="confirm-delete-button" (click)="handleConfirmDelete()">
+    Yes, Delete
+  </button>
+  <button class="cancel-delete-button" (click)="closeDeletePopup()">
+    Cancel
+  </button>
+</div>
