--- a/angularapp/src/app/components/feedback/formerviewfeedback/formerviewfeedback.component.html
+++ b/angularapp/src/app/components/feedback/formerviewfeedback/formerviewfeedback.component.html
@@ -6,7 +6,7 @@
         <tr>
           <th>S.No</th>
           <th>Feedback</th>
-          <th>Action</th>
+          <!-- <th>Action</th> -->
         </tr>
       </thead>
       <tbody>
