--- a/angularapp/src/app/components/feedback/viewfeedback/viewfeedback.component.html
+++ b/angularapp/src/app/components/feedback/viewfeedback/viewfeedback.component.html
@@ -6,13 +6,15 @@
         <tr>
           <th>S.No</th>
           <th>Feedback</th>
-          <th>Action</th>
+          <th>Given By</th>
+          <!-- <th>Action</th> -->
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let feedback of feedbacks; let i = index">
           <td>{{ i + 1 }}</td>
           <td>{{ feedback.FeedbackText }}</td>
+          <td>{{feedback.UserId}}</td>
           <!-- <td><button class="delete-button" (click)="openDeletePopup(feedback.FeedbackId)">Delete</button></td> -->
         </tr>
       </tbody>
