--- a/angularapp/src/app/components/request/createrequest/createrequest.component.html
+++ b/angularapp/src/app/components/request/createrequest/createrequest.component.html
@@ -1,1 +1,121 @@
-<p>createrequest works!</p>
+<div>
+    <div class="loan-form-container" [ngClass]="{ blur: successPopup }">
+      <h2>Create New Request</h2>
+      <hr>
+      <form #requestForm="ngForm" (ngSubmit)="onSubmit(requestForm)">
+        
+        <label for="UserId">UserId<span class="required">*</span></label>
+        <input
+          type="number"
+          name="UserId"
+          [(ngModel)]="formData.UserId"
+          placeholder="UserId"
+          required
+          disabled
+          #UserId="ngModel"
+          (change)="handleChange($event, 'UserId')"
+        />
+        <div class="error" *ngIf="UserId.invalid && UserId.touched">
+          *UserId is required
+        </div>
+  
+        <label for="CropId">CropId<span class="required">*</span></label>
+        <input
+          type="number"
+          name="CropId"
+          [(ngModel)]="formData.CropId"
+          placeholder="CropId"
+          required
+          
+          #CropId="ngModel"
+          (change)="handleChange($event, 'CropId')"
+        />
+
+        <label for="AgrochemicalId">AgrochemicalId<span class="required">*</span></label>
+        <input
+          type="number"
+          name="AgrochemicalId"
+          [(ngModel)]="formData.AgrochemicalId"
+          placeholder="AgrochemicalId"
+          required
+          disabled
+          #AgrochemicalId="ngModel"
+          (change)="handleChange($event, 'AgrochemicalId')"
+        />
+
+        <div class="error" *ngIf="AgrochemicalId.invalid && AgrochemicalId.touched">
+          *AgrochemicalId is required
+        </div>
+
+        <label for="Quantity">Quantity<span class="required">*</span></label>
+        <input
+          type="number"
+          name="Quantity"
+          [(ngModel)]="formData.Quantity"
+          placeholder="Quantity"
+          required
+          #Quantity="ngModel"
+          (change)="handleChange($event, 'Quantity')"
+        />
+        <div class="error" *ngIf="Quantity.invalid && Quantity.touched">
+          *Quantity is required
+        </div>
+  
+  
+        <label for="RequestPurpose">RequestPurpose<span class="required">*</span></label>
+        <input
+          type="text"
+          name="RequestPurpose"
+          [(ngModel)]="formData.RequestPurpose"
+          placeholder="RequestPurpose"
+          required
+          #RequestPurpose="ngModel"
+          (change)="handleChange($event, 'RequestPurpose')"
+        />
+        <div class="error" *ngIf="RequestPurpose.invalid && RequestPurpose.touched">
+          *RequestPurpose is required
+        </div>
+
+        <label for="Status">Status<span class="required">*</span></label>
+        <input
+          type="text"
+          name="Status"
+          [(ngModel)]="formData.Status"
+          placeholder="Status"
+          required
+          #Status="ngModel"
+          (change)="handleChange($event, 'Status')"
+        />
+        <div class="error" *ngIf="Status.invalid && Status.touched">
+          *Status is required
+        </div>
+  
+  
+        <label for="RequestDate">RequestDate<span class="RequestDate">*</span></label>
+        <input
+          type="date"
+          name="RequestDate"
+          [(ngModel)]="formData.RequestDate"
+          placeholder="RequestDate"
+          required
+          #RequestDate="ngModel"
+          (change)="handleChange($event, 'RequestDate')"
+        />
+        <div class="error" *ngIf="RequestDate.invalid && RequestDate.touched">
+          *RequestDate Amount is required
+        </div>
+  
+        <div *ngIf="errorMessage" class="error">
+          *{{ errorMessage }}
+        </div>
+  
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+  
+    <div *ngIf="successPopup" class="success-popup">
+      <p>Successfully Added!</p>
+      <button (click)="handleSuccessMessage()">Ok</button>
+    </div>
+  </div>
+  
