--- a/angularapp/src/app/components/request/viewrequest/viewrequest.component.html
+++ b/angularapp/src/app/components/request/viewrequest/viewrequest.component.html
@@ -1,1 +1,72 @@
-<p>viewrequest works!</p>
+<div>
+    <div id="loanHomeBody">
+      <h1>My requests Crops</h1>
+      <hr>
+  
+      <!-- Search Box -->
+      <div class="top-container">
+        <input id="searchBox" type="text" placeholder="Search..." [(ngModel)]="searchField"
+          (ngModelChange)="handleSearchChange($event)" />  
+      </div>
+  
+      <!-- Available Loans Table -->
+      <table class="loan-table">
+        <thead>
+          <tr>
+            
+            <th>S.No</th>            
+            <th>CropId</th>
+            <th>AgrochemicalId</th>
+            <th>Quantity</th>
+            <th>RequestPurpose</th>
+            <th>Status</th>
+            <th>RequestDate</th>
+            <th *ngIf="!isSeller">Edit</th>
+            <th>Change Status</th>
+            <th *ngIf="!isSeller">Delete</th>
+          </tr>
+        </thead>
+        <tbody *ngIf="filteredFarmerRequest.length; else noRecords">
+          <tr *ngFor="let request of filteredFarmerRequest,let i = index">
+            <td>{{ i + 1 }}</td>
+            <td>{{ request.CropId }}</td>
+            <td>{{ request.AgroChemicalId }}</td>
+            <td>{{ request.Quantity }}</td>
+            <td>{{ request.RequestPurpose }}</td>
+            <td>{{ request.Status }}</td>
+            <td>{{ request.RequestDate }}</td>           
+            <td *ngIf="!isSeller">
+              <button (click)="navigateToEditRequest(request.RequestId)">Edit</button>
+              <!--   -->
+            </td>
+            <td *ngIf="isSeller">
+              <button (click)="navigateToEditRequest(request.RequestId)">Change Status</button>
+              <!--   -->
+            </td>
+            <td *ngIf="!isSeller">
+              <button (click)="handleDeleteClick(request.RequestId)">Delete</button>
+            </td>
+          </tr>
+        </tbody>
+  
+        <ng-template #noRecords>
+          <tbody>
+            <tr>
+              <td colSpan="9" class="no-records-cell">Oops! No records Found</td>
+            </tr>
+          </tbody>
+        </ng-template>
+      </table>
+    </div>
+  </div>
+  
+  
+  <div *ngIf="showDeletePopup" class="delete-popup">
+    <p>Are you sure you want to delete?</p>
+    <button class="confirm-delete-button" (click)="handleConfirmDelete()">
+      Yes, Delete
+    </button>
+    <button class="cancel-delete-button" (click)="closeDeletePopup()">
+      Cancel
+    </button>
+  </div>
